force-app/main/default/objects/FS_AceptacionRechazoCaso__c/FS_AceptacionRechazoCaso__c.object-meta.xml
<CustomObject>
    <label>Aceptación / Rechazo de Caso</label>
    <nameField>
        <displayFormat>AR-{0000000}</displayFormat>
        <label>Nombre de Aceptación / Rechazo de Caso</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aceptación / Rechazo de Casos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>