force-app/main/default/objects/FS_AceptacionRechazoCaso__c/fields/FS_Cliente__c.field-meta.xml
<CustomField>
    <fullName>FS_Cliente__c</fullName>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Aceptación / Rechazo de Casos</relationshipLabel>
    <relationshipName>Aceptaci_n_Rechazo_de_Casos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>