force-app/main/default/objects/FS_AceptacionRechazoCaso__c/fields/FS_Fecha_de_Pase_Produccion__c.field-meta.xml
<CustomField>
    <fullName>FS_Fecha_de_Pase_Produccion__c</fullName>
    <label>Fecha de Pase Producción</label>
    <type>DateTime</type>
</CustomField>