force-app/main/default/objects/FS_AceptacionRechazoCaso__c/fields/FS_Horas__c.field-meta.xml
<CustomField>
    <fullName>FS_Horas__c</fullName>
    <label>Horas</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>