force-app/main/default/objects/FS_AceptacionRechazoCaso__c/fields/FS_Tipo__c.field-meta.xml
<CustomField>
    <fullName>FS_Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aceptación</fullName>
            </value>
            <value>
                <fullName>Rechazo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>