force-app/main/default/objects/FS_AceptacionRechazoCaso__c/fields/FS_Tipo_de_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>FS_Tipo_de_Aprobacion__c</fullName>
    <label>Tipo de Aprobación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Propuesta Económica</fullName>
            </value>
            <value>
                <fullName>Aceptación Solución</fullName>
            </value>
            <value>
                <fullName>Puesta en Producción</fullName>
            </value>
            <value>
                <fullName>Finalizar Atención</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>